@@ -1,3 +1,7 @@
+2004-07-29 Eric Sandall <eric@sandall.us>
+	* INSTALL: Install mozilla.sh
+	* mozilla.sh: profile.d script to set MOZILLA_FIVE_HOME
+
 2004-07-18 Eric Sandall <eric@sandall.us>
 	* DEPENDS: libIDL renamed to libidl
 
