@@ -1,3 +1,9 @@
+2004-07-29 Eric Sandall <eric@sandall.us>
+	* INSTALL: Install firefox.sh
+	  Create a symlink from /usr/bin/mozilla to /usr/bin/firefox if
+	  /usr/bin/mozilla does not exist or is a symlink
+	* firefox.sh: profile.d script to set MOZILLA_FIVE_HOME
+
 2004-07-18 Eric Sandall <eric@sandall.us>
 	* DEPENDS: ORBit renamed to orbit
 	  libIDL renamed to libidl
